adds circle chart

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
 	<!-- Add Scripts Here -->
 	<script src="https://d3js.org/d3.v7.min.js"></script>
+	<script src="js/songs.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
